# ml_labs_lgk

./: .gitignore  pyproject.toml
labs/01_regression/student/: task_01.ipynb
labs/01_regression/tasks/: task_01.ipynb
labs/answers/01_regression/task_02/notebooks/02-modeling/: modelo_final_aula7.joblib  task_02_LGK.ipynb
labs/answers/02_classification/: task_LGK.ipynb
labs/student/PF/: Avaliacao_Final_ML_ENG_2025_1.ipynb
labs/student/PF/03_linear_models/: task_01.ipynb  task_02.ipynb
labs/student/PF/04_svm/: task_01.ipynb
labs/student/PF/05_decision_tree/: task_01.ipynb
labs/student/PI/: PI.ipynb  codigo_consulta.ipynb
labs/student/PI_REAL/: Avaliacao_Intermediaria_ML_ENG_2025_1.ipynb  utils.py
labs/student/simulado_PI/: Avaliacao_Intermediaria_BCC_2025_1.ipynb  gabarito_Avaliacao_Intermediaria_BCC_2025_1.ipynb
