[project]
name = "ml-labs-lgk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "ipykernel>=6.29.5",
    "isort>=6.0.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "pyarrow>=19.0.0",
    "pylint>=3.3.4",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "tabulate>=0.9.0",
    "yapf>=0.43.0",
]
